# dumb-music-player

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: fly-release.yml
templates/: admin_add_song.html  admin_cookies.html  admin_dashboard.html  admin_search_results.html  base.html
tests/: demo_add_song.py  test_e2e.py
